--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Download</button>
     <div class="p-5 text-center bg-body-tertiary">
       <div class="container py-5">
         <h2 class="text-body-emphasis">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</h2>
-        <img class="profile-img mt-5" src="./images/dog-img.jpg" alt="Doggo"/>
+        <img class="profile-img mt-5" src="dog-img.jpg" alt="Doggo"/>
         <p class="col-lg-8 mx-auto lead mt-2">
           Mittu, Chengannur
         </p>
@@ -113,16 +113,16 @@ Download</button>
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-sm-12">
-            <img src="./images/mashable.png" alt="mashable" height="30px"/>
+            <img src=".mashable.png" alt="mashable" height="30px"/>
           </div>
           <div class="col-lg-3 col-sm-12">
-            <img src="./images/techcrunch.png" alt="techcrunch" height="30px"/>
+            <img src=".techcrunch.png" alt="techcrunch" height="30px"/>
           </div>
           <div class="col-lg-3 col-sm-12">
-            <img src="./images/tnw.png" alt="tnw" height="30px"/>
+            <img src=".tnw.png" alt="tnw" height="30px"/>
           </div>
           <div class="col-lg-3 col-sm-12">
-            <img src="./images/bizinsider.png" alt="bizinsider" height="30px"/>
+            <img src=".bizinsider.png" alt="bizinsider" height="30px"/>
           </div>
         </div>
       </div>
